--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
-  "name": "rpt12-fec-proxy",
+  "name": "rpt12-sdc-proxy",
   "version": "1.0.0",
   "description": "Proxy for delivering all goodreads services on localhost",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/rpt12-knightrider/sm-proxy.git"
+    "url": "git+https://github.com/rpt12-sdc-highgarden/alyssa-proxy"
   },
-  "author": "Steve Miller",
+  "author": "Alyssa Cipriano",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/rpt12-knightrider/sm-proxy/issues"
+    "url": "https://github.com/rpt12-sdc-highgarden/alyssa-proxy/issues"
   },
-  "homepage": "https://github.com/rpt12-knightrider/sm-proxy#readme",
+  "homepage": "https://github.com/rpt12-sdc-highgarden/alyssa-proxy#readme",
   "dependencies": {
     "express": "^4.16.4",
     "react": "^16.8.6",
