--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/rpt12-sdc-highgarden/alyssa-proxy#readme",
   "dependencies": {
     "express": "^4.16.4",
+    "newrelic": "^5.10.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   }
